[tool.poetry]
name = "easybrake"
version = "0.0.1"
description = "Handbrake on easy"
authors = ["pythoninja <pythoninja@users.noreply.github.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
eb = 'easybrake.cli:run_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tbump]
github_url = "https://github.com/pythoninja/easybrake/"

[tool.tbump.version]
current = "0.0.1"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "chore(release): v{new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "easybrake/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'
